--- a/package.json
+++ b/package.json
@@ -9,16 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/inter": "^5.0.19",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^5.16.5",
+    "@tanstack/react-query": "^5.51.15",
+    "add": "^2.0.6",
+    "formik": "^2.4.6",
+    "i18next": "^23.12.2",
+    "lodash": "^4.17.21",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^15.0.0",
+    "uuid": "^10.0.0",
+    "yarn": "^1.22.22",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "typescript": "^5"
   }
 }
