--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^2.4.0",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.9",
     "typescript": "^5"
   }
 }
